--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "sweetalert2-react": "^0.8.3",
-    "sweetalert2-react-content": "^3.0.1"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
